--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	
-	<link rel="stylesheet" href="css/base.css" media="screen" />
+	<link rel="stylesheet" href="css/screen.css" media="screen" />
 	<link rel="stylesheet" href="css/print.css" media="print" />
 	
 	
@@ -40,7 +40,7 @@
 		<ul id="nav-utility">
 			<li><a href="#">Example</a></li>
 			<li><a href="#">Example</a></li>
-		</ul> <!-- /ul#navUtility -->
+		</ul> <!-- /#nav-utility -->
 			
 		<form id="search" action="#" role="search">
 			<fieldset>
@@ -57,7 +57,7 @@
 
 
 	<div class="torso">
-		<div id="content" role="main">
+		<div class="content" role="main">
 		
 			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed 
 			diam nonumy eirmod tempor invidunt ut labore et dolore magna 
@@ -88,12 +88,12 @@
 				</fieldset>
 			</form>
 		
-		</div> <!-- /#content -->
+		</div> <!-- /.content -->
 			
-		<div id="focusAreas">
-		</div> <!-- /#focusAreas -->
+		<div id="focus-areas">
+		</div> <!-- /#focus-areas -->
 
-		<div id="nav-secondary">
+		<div id="nav-secondary" role="navigation">
 		</div> <!-- /#nav-secondary -->
 	
 	</div> <!-- /.torso -->
