--- a/template.html
+++ b/template.html
@@ -1,22 +1,148 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
+    <meta charset="utf-8">
 
-	<title></title>
-	<meta charset="utf-8">
-	<meta name="robots" content="all" />
-	<meta name="copyright" content="[Company Name] - [Current Year]" />
+	<title>Pregame by PixelMEDIA</title>
+	<meta name="copyright" content="[Organization Name] - [Current Year]">
+	<meta name="description" content="Pregame is a website and web application boilerplate created by PixelMEDIA.">
 	
-	<meta name="description" content="" />
+	<link rel="shortcut type" icon="image/x-icon" href="favicon.ico">
 	
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<!--
+		Modernizr
+		=========
+		Adds browser feature detection. This should always be placed before stylesheets.
+		When application is ready for production use be sure to creaate a custome
+		Modernizr build inlcuding only the features used: http://modernizr.com/download/
+	-->
+	<script src="_/js/vendor/modernizr.min.js"></script>
+
+	<!--
+		Stylesheets
+		===========
+		Compiled css from SASS(SCSS flavor) source files: _/scss/.
+	-->
+
+	<!-- Styles for Internet Explorer versions less than 9 -->
+	<!--[if lt IE 9]>
+	<link href="_/css/ltie9.css" rel="stylesheet"/>
+	<![endif]-->
+
+	<!-- Style for all other browsers -->
+	<!--[if gte IE 9]><!-->
+	<link rel="stylesheet" href="_/css/screen.css" media="screen">
+	<link rel="stylesheet" href="_/css/print.css" media="print">
+	<!--<![endif]-->
 	
-	<link rel="stylesheet" href="css/screen.css" media="screen" />
-	<link rel="stylesheet" href="css/print.css" media="print" />
+</head>
+
+<body id="top">
+
+	<header>
+	<div class="header" role="banner">
+
+		<!-- Site logo -->
+		<div id="logo" class="brand brand-logo">
+			<a href="#"><img src="_/images/logo.png" alt="[Organization Name] Logo"></a>
+		</div><!--/ id="logo"-->
+		
+		<!-- Site-wide search form -->
+		<form id="search" action="#" role="search">
+			<fieldset>
+				<legend>Site Search</legend>
+				<input type="search" id="searchField" title="search">
+				<input type="image" src="img/interface/search-arrow.gif" alt="Submit Search" id="searchButton">
+			</fieldset>
+		</form><!--/ id="search"-->
+
+		<!-- Primary Navigation -->
+		<nav>
+		<div id="nav-primary" class="navbar" role="navigation">
+			<ul class="nav">
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+				<li>Item 4</li>
+			</ul>
+		</div> <!-- / id="nav-primary" -->
+		</nav>
+
+	</div> <!-- / .header -->
+	</header>
+
+	<div id="main" class="container" role="main">
 	
+		<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed 
+		diam nonumy eirmod tempor invidunt ut labore et dolore magna 
+		aliquyam erat, sed diam voluptua. At vero eos et accusam et 
+		justo duo dolores et ea rebum. Stet clita kasd gubergren, no 
+		sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+		
+		<form>
+			<fieldset>
+				<div>
+					<label for="name">Name:</label>
+					<input type="text" id="name">
+				</div>
+				<div>
+					<label for="email">Email:</label>
+					<input type="email" id="email" placeholder="e.g. username@example.com">
+				</div>
+				<div>
+					<label for="state">State:</label>
+					<select id="state">
+						<option>Confusion</option>
+						<option>Mind</option>
+					</select>
+				</div>
+				<div class="buttonRow">
+					<input type="submit" value="Submit">
+				</div>
+			</fieldset>
+		</form>
 	
-	<script type="text/javascript">
+	</div> <!-- / id="main" -->
+		
+	<div id="focus-areas">
+	</div> <!-- /#focus-areas -->
+
+
+	<footer>
+	<div class="footer">
+		<div id="copyright">&copy;[Current Year] [Organization Name]</div>
+		<div id="nav-footer"></div>
+	</div> <!-- /.footer -->
+	</footer>
+	
+
+<!-- Javascripts -->
+
+	<!--
+		jQuery
+		====== 
+		Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary
+	-->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="_/js/vendor/jquery-1.9.1.min.js">\x3C/script>')</script>
+
+	<!--
+		UI, site/application wide 
+	-->
+	<script src="_/js/ui.js"></script>
+
+	<!--
+		Application logic, site/application wide 
+	-->
+	<script src="_/js/application.js"></script>
+
+	<!-- 
+		Google Analytics code.
+		======================
+		Replace UA-XXXXX-X with GA code for this site or application. 
+		It is OK to delete this code if GA is not used or required.
+	-->
+	<script>
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-XXXXX-X']);
 		_gaq.push(['_trackPageview']);
@@ -27,91 +153,6 @@
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
 	</script>
-</head>
-
-<body id="top">
-<div id="envelope">
-
-	<div class="header">
-		<div id="logo" role="banner">
-			<a href="#"><!-- logo --></a>
-		</div>
-		
-		<ul id="nav-utility">
-			<li><a href="#">Example</a></li>
-			<li><a href="#">Example</a></li>
-		</ul> <!-- /#nav-utility -->
-			
-		<form id="search" action="#" role="search">
-			<fieldset>
-				<label for="searchField">Search</label>
-				<input type="search" id="searchField" />
-				<input type="image" src="img/interface/search-arrow.gif" alt="Submit Search" id="searchButton" />
-			</fieldset>
-		</form> <!--/form#search-->
-
-		<div id="nav-primary" role="navigation">
-		</div> <!-- /#nav-primary -->
-	</div> <!-- /div.header -->
-
-
-
-	<div class="torso">
-		<div class="content" role="main">
-		
-			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed 
-			diam nonumy eirmod tempor invidunt ut labore et dolore magna 
-			aliquyam erat, sed diam voluptua. At vero eos et accusam et 
-			justo duo dolores et ea rebum. Stet clita kasd gubergren, no 
-			sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-			
-			<form>
-				<fieldset>
-					<div>
-						<label for="name">Name:</label>
-						<input type="text" id="name" />
-					</div>
-					<div>
-						<label for="email">Email:</label>
-						<input type="text" id="email" />
-					</div>
-					<div>
-						<label for="state">State:</label>
-						<select id="state">
-							<option>Confusion</option>
-							<option>Mind</option>
-						</select>
-					</div>
-					<div class="buttonRow">
-						<input type="submit" value="Submit" />
-					</div>
-				</fieldset>
-			</form>
-		
-		</div> <!-- /.content -->
-			
-		<div id="focus-areas">
-		</div> <!-- /#focus-areas -->
-
-		<div id="nav-secondary" role="navigation">
-		</div> <!-- /#nav-secondary -->
-	
-	</div> <!-- /.torso -->
-
-	<div class="footer">
-		<div id="copyright">&copy;[Current Year] [Company Name]</div>
-		<div id="nav-footer"></div>
-	</div> <!-- /.footer -->
-	
-		
-</div> <!-- /#envelope -->
-
-
-	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.9.1.min.js">\x3C/script>')</script>
-
-	<script type="text/javascript" src="js/common.js"></script>
 
 </body>
 </html>
