adding custom modernizr

--- a/template.html
+++ b/template.html
@@ -14,6 +14,8 @@
 	
 	<link rel="stylesheet" href="css/screen.css" media="screen" />
 	<link rel="stylesheet" href="css/print.css" media="print" />
+
+	<script src="js/libs/modernizr.custom.96609.js"></script>
 	
 	
 	<script type="text/javascript">
