Background color for .brand-logo. Ignore css folder since it should be compiled in development or part of a build process.

--- a/template.html
+++ b/template.html
@@ -49,7 +49,7 @@
 
 		<!-- Site logo -->
 		<div class="brand brand-logo">
-			<a href="#"><img src="_/images/logo.png" alt="[Organization Name] Logo"></a>
+			<a href="#"><img src="img/logo.png" alt="[Organization Name] Logo"></a>
 		</div><!--/.brand-logo-->
 			
 		<!-- Site-wide search form -->
