myr - added input type phone and email

--- a/template.html
+++ b/template.html
@@ -92,7 +92,11 @@
 					</div>
 					<div class="form-row">
 						<label for="email">Email:</label>
-						<input type="text" id="email" />
+						<input type="email" id="email" />
+					</div>
+					<div class="form-row">
+						<label for="phone">Phone:</label>
+						<input type="tel" id="phone" />
 					</div>
 					<div class="form-row">
 						<label for="state">State:</label>
