myr - added meta viewport tag

--- a/template.html
+++ b/template.html
@@ -9,6 +9,8 @@
 	<meta name="copyright" content="[Company Name] - [Current Year]" />
 	
 	<meta name="description" content="" />
+
+	<!-- For responsive layouts, uncomment this line: <meta name="viewport" content="width=device-width" /> -->
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	
