--- a/template.html
+++ b/template.html
@@ -36,17 +36,17 @@
 <body id="top">
 <div id="envelope">
 
-	<div class="header">
+	<header class="header">
 		<div id="logo" role="banner">
 			<a href="#">SITE LOGO</a>
 		</div>
 		
-		<div class="nav-utility">
+		<nav class="nav-utility">
 			<ul>
 				<li><a href="#">Utility Nav Item</a></li>
 				<li><a href="#">Utility Nav Item</a></li>
 			</ul> 
-		</div> <!-- /.nav-utility -->
+		</nav> <!-- /.nav-utility -->
 			
 		<form id="search" action="#" role="search">
 			<fieldset>
@@ -56,7 +56,7 @@
 			</fieldset>
 		</form> <!--/form#search-->
 
-		<div class="nav-primary" role="navigation">
+		<nav class="nav-primary" role="navigation">
 			<ul>
 				<li class="top-level">
 					<a href="#">Primary Nav Item</a>
@@ -68,8 +68,8 @@
 					<a href="#">Primary Nav Item</a>
 				</li>
 			</ul>
-		</div> <!-- /#nav-primary -->
-	</div> <!-- /div.header -->
+		</nav> <!-- /.nav-primary -->
+	</header> <!-- /header -->
 
 
 
@@ -123,14 +123,14 @@
 				<li><a href="#">Secondary Nav Item</a></li>
 				<li><a href="#">Secondary Nav Item</a></li>
 			</ul>
-		</div> <!-- /#nav-secondary -->
+		</div> <!-- /.nav-secondary -->
 	
 	</div> <!-- /.torso -->
 
-	<div class="footer">
+	<footer class="footer">
 		<div id="copyright">&copy;[Current Year] [Company Name]</div>
 		<div id="nav-footer"></div>
-	</div> <!-- /.footer -->
+	</footer> <!-- /footer -->
 	
 		
 </div> <!-- /#envelope -->
