Formatting to Mel's changes in PR and closes #4

--- a/template.html
+++ b/template.html
@@ -10,7 +10,9 @@
 	
 	<meta name="description" content="" />
 
-	<!-- For responsive layouts, uncomment this line: <meta name="viewport" content="width=device-width" /> -->
+	<!-- 
+	For responsive layouts, uncomment this line: <meta name="viewport" content="width=device-width" /> 
+	-->
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	
@@ -41,12 +43,12 @@
 			<a href="#">SITE LOGO</a>
 		</div>
 		
-		<nav class="nav-utility">
+		<div class="nav-utility">
 			<ul>
 				<li><a href="#">Utility Nav Item</a></li>
 				<li><a href="#">Utility Nav Item</a></li>
 			</ul> 
-		</nav> <!-- /.nav-utility -->
+		</div> <!-- /.nav-utility -->
 			
 		<form id="search" action="#" role="search">
 			<fieldset>
