--- a/template.html
+++ b/template.html
@@ -3,8 +3,11 @@
 <html lang="en">
 <head>
 
-	<title></title>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+	<title></title>
+
 	<meta name="robots" content="all" />
 	<meta name="copyright" content="[Company Name] - [Current Year]" />
 	
