--- a/template.html
+++ b/template.html
@@ -40,6 +40,8 @@
 		<div id="logo" role="banner">
 			<a href="#">SITE LOGO</a>
 		</div>
+
+		<div class="visually-hidden"><a href="#maincontent">skip to main content</a></div>
 		
 		<nav class="nav-utility">
 			<ul>
@@ -74,7 +76,7 @@
 
 
 	<div class="torso">
-		<div class="content" role="main">
+		<div class="content" role="main" id="content">
 
 			<h1 class="page-header">Page Header</h1>
 		
