--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="static/css/screen.css" media="screen" />
 	<link rel="stylesheet" href="static/css/print.css" media="print" />
 
-	<script src="static/vendor/modernizr.custom.35251.js"></script>
+	<script src="static/vendor/modernizr-custom.js"></script>
 	
 	
 	<script type="text/javascript">
